--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "next lint",
+    "test:e2e": "playwright test",
+    "test:api": "newman run postman/ai-studio.postman_collection.json"
   },
   "dependencies": {
     "next": "16.0.6",
@@ -15,6 +17,7 @@
     "rxjs": "^7.8.2"
   },
   "devDependencies": {
+    "@playwright/test": "^1.57.0",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
@@ -22,6 +25,7 @@
     "babel-plugin-react-compiler": "1.0.0",
     "eslint": "^9",
     "eslint-config-next": "16.0.6",
+    "newman": "^6.2.1",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
